styles/base.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    display: grid;
    grid-template: 1fr auto 1fr/ 1fr;
    background-color: #F7EDE2;
}

h1, h2, h3, h4 {
    padding: 1rem;
    text-align: center;
    font-family: "Roboto", sans-serif;
    font-weight: 400;
}

header {
    background-color: #84a59da6;
    text-align: center;
}

nav {
    display: flex;
}

nav a {
    flex: auto;
    background-color: #5c746e;
    padding: .5rem;
    text-decoration: none;
    color: white;
}

a:hover {
    background-color: white;
    color: #6c8780;
}

main {
    margin: 2rem .5rem;
    max-width: 100%;
    display: grid;
    gap: 1rem;
    grid-template-columns: repeat(auto-fit, minmax(300px, auto));
}

.card, .links {
    padding: 1rem;
    display: flex;
    flex-direction: column;
}

.state {
    border-top: 1.5px solid  #F5CAC3;
}

p {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    padding: 1rem;
}

img {
    margin: 1rem;
    float: right;
    max-height: 200px;
    border: 1px solid black;
    border-radius: .3rem;
}

figure {
    float: left;
    text-align: center;
}

.resources {
    background-color: #F5CAC3;
    border: 1px solid #f284826c;
    border-radius: 1rem;
}

.links {
    flex: 1;
}

.links li, .links a {
    color: black;
    margin: 1rem 0;
    text-decoration: none;
}

.links a:hover {
    background-color: #F28482;
}

footer {
    text-align: center;
    background-color: #84a59d75;
}

